# InkPrint

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
.cargo/: config.toml
android/: gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/inkprint/app/: BootReceiver.kt  InkPrintApplication.kt  InkPrintLib.kt  MainActivity.kt  PrinterService.kt
android/app/src/main/kotlin/com/inkprint/uniffi/uniffi/inkprint/: inkprint.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: file_paths.xml
docs/: prompts.md
inkprint-core/: Cargo.toml  build.rs
inkprint-core/src/: inkprint.udl  lib.rs
inkprint-core/src/ipp/: mod.rs  operations.rs  parser.rs  printer.rs  response.rs  types.rs
inkprint-core/src/mdns/: advertiser.rs
inkprint-core/src/server/: http.rs  listener.rs  mod.rs
inkprint-core/tests/: integration_test.rs
scripts/: test_ipp.py
