[package]
name = "inkprint-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "inkprint_core"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
mdns-sd = "0.11"
uniffi = { version = "0.28", features = ["tokio"] }
bytes = "1"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6"
thiserror = "2"
once_cell = "1"
if-addrs = "0.13"
libc = "0.2"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3"
reqwest = { version = "0.12", features = ["blocking"] }
